samples/_failures_safe/1761492530_480172_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e58f7db0.c: In function ‘main’:
./samples/SAFE/__tmp_e58f7db0.c:161:30: error: expected ‘)’ at end of input
  161 |     buffer_free(&decompressed
      |                ~             ^
      |                              )
./samples/SAFE/__tmp_e58f7db0.c:161:5: error: expected declaration or statement at end of input
  161 |     buffer_free(&decompressed
      |     ^~~~~~~~~~~
